--- a/index.html
+++ b/index.html
@@ -17,25 +17,56 @@
   </head>
 
   <body>
-    <header class="container-fluid text center text-white bg-dark p-2">
+    <header class="container-fluid text-center text-white bg-dark p-2">
       <h1>Weather Dashboard</h1>
     </header>
-    <div class= "container-fluid">
+    <div class= "container-fluid ">
       <div class = "row">
         <div class = "col-lg-3 bg-light">
           <h4 class ="mt-1" Search for a City:></h4>
-          <div class = "input-group mb-3"
-          <input id = "enter-city" type = "text" class="form-control" placeholder = "Los Angeles" aria-label = "Enter a City">
-          <div class = "input-group-append"
-            <button class = "btn btn-primary" type = "button" id ="search-burron">
-               <i class = "fas fa-search"></i>
-            </button>
+          <div class = "input-group mb-3">
+            <input id = "enter-city" type = "text" class="form-control" placeholder = "Los Angeles" aria-label = "Enter a City">
+            <div class = "input-group-append">
+             <button class = "btn btn-primary" type = "button" id = "search-burron" >
+                 <i class = "fas fa-search"></i>
+              </button>
+            </div>
           </div>
-           <button class = "btn btn-primary mb-3"    type = "button" id="claer-history">Clear history</button>
+          <button class = "btn btn-primary mb-3"    type = "button" id="claer-history">Clear history</button>
           <form id = "history"></form>
 
 </div>
+<div class = "col-lg-9">
+  <div class = "row mr-0">
+    <div class = "col-lg-11 card m-3 d-non" id = "today-weahter">
+      <div class = "card-body">
+        <h3 id ="city-name" class = "city-name align middle"></h3> 
+        <img id="current-pic" alt="">
+        <p id="temperature"></p>
+        <p id="humidity"></p>
+        <p id="wind-speed"></p>
+        <p id="UV-index"></p>
 
+
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+  <div class="row d-none" id="fiveday-header">
+    <div class="col-12">
+        <h3>5-Day Forecast</h3>
+      </div>
+      <div class="row">
+        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+        <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+</div>
 
 </div>
 
