--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           <div class = "input-group mb-3">
             <input id = "enter-city" type = "text" class="form-control" placeholder = "Los Angeles" aria-label = "Enter a City">
             <div class = "input-group-append">
-             <button class = "btn btn-primary" type = "button" id = "search-burron" >
+             <button class = "btn btn-primary" type = "button" id = "search-button" >
                  <i class = "fas fa-search"></i>
               </button>
             </div>
           </div>
-          <button class = "btn btn-primary mb-3"    type = "button" id="claer-history">Clear history</button>
+          <button class = "btn btn-primary mb-3" type = "button" id="clear-history">Clear history</button>
           <form id = "history"></form>
 
 </div>
