--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
     />  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Weather Dashboard</title>
   </head>
@@ -21,7 +22,7 @@
       <h1>Weather Dashboard</h1>
     </header>
 
-    <div class= "container-fluid ">
+    <div class= "container-fluid">
       <div class = "row">
         <div class = "col-lg-3 bg-light">
           <h4 class ="mt-1" Search for a City:></h4>
@@ -39,7 +40,7 @@
         </div>
         <div class = "col-lg-9">
           <div class = "row mr-0">
-            <div class = "col-lg-11 card m-3 d-none" id = "today-weahter">
+            <div class = "col-lg-11 card m-3 d-none" id = "today-weather">
               <div class = "card-body">
                 <h3 id ="city-name" class = "city-name align-middle"></h3> 
                 <img id="current-pic" alt="">
